--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,10 @@
   "trailingComma": "es5",
   "printWidth": 100,
   "useTabs": false,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": false,
+  "quoteProps": "consistent"
 }
