--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,30 +8,39 @@
     "skipLibCheck": true,
     "baseUrl": "src",
     "paths": {
-      "@/styles/*": ["styles/*"], 
+      "@/styles/*": ["styles/*"],
       "@/shared/*": ["shared/*"],
       "@/graphql/*": ["graphql/*"],
       "@/utils/*": ["shared/utils/*"],
       "@/hooks/*": ["hooks/*"],
       "@/constants/*": ["shared/constants/*"],
       "@/containers/*": ["containers/*"],
-      "@/routes/*": ["routes/*"],
+      "@/routes/*": ["routes/*"]
     },
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-
+    // "jsx": "react-jsx",
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    /* Migration */
+    "esModuleInterop": true,
+    "jsx": "preserve",
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["./","./vanta.types.d.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["./src", "./dist/types/**/*.ts", "./next-env.d.ts"],
+  "exclude": ["./node_modules"]
 }
