--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
+    "@types/recharts": "^1.8.29",
     "@types/three": "^0.158.1",
     "add": "^2.0.6",
     "bootstrap": "^5.3.2",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -37,7 +38,7 @@
     "react-hook-form": "^7.48.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "recharts": "^2.9.3",
+    "recharts": "^2.12.2",
     "smooth-scrollbar": "^8.8.4",
     "smooth-scrollbar-react": "^2.4.1",
     "styled-components": "^6.1.0",
@@ -56,8 +57,8 @@
     "@types/react-router-dom": "5.3.1",
     "@types/styled-components": "^5.1.29",
     "@types/styled-theming": "^2.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
