--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,20 +4,21 @@
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "types": ["vite/client"],
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["vite/client", "jest", "react", "react-dom", "node"],
     "skipLibCheck": true,
     "baseUrl": "src",
     "paths": {
-      "@/styles/*": ["styles/*"], 
+      "@/styles/*": ["styles/*"],
       "@/shared/*": ["shared/*"],
       "@/graphql/*": ["graphql/*"],
       "@/utils/*": ["shared/utils/*"],
       "@/hooks/*": ["hooks/*"],
       "@/constants/*": ["shared/constants/*"],
       "@/containers/*": ["containers/*"],
-      "@/routes/*": ["routes/*"],
+      "@/routes/*": ["routes/*"]
     },
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -25,13 +26,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./","./vanta.types.d.ts"],
+  "include": ["./", "./vanta.types.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
