--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,7 @@
 name: CI pipeline
 on:
   workflow_dispatch:
+  workflow_call:
   pull_request:
     branches:
       - 'dev'
@@ -29,3 +30,8 @@ jobs:
         run: yarn test
       - name: build code
         run: yarn build
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: dist
