--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.1",
     "mdi-react": "^9.3.0",
+    "moment-timezone": "^0.5.45",
     "polished": "^4.2.2",
     "prop-types": "^15.8.1",
     "rc-notification": "^5.3.0",
