--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "PORT=5173 next dev ",
+    "dev": "set PORT=5173 && next dev",
     "build": "next build",
     "lint": "next lint",
     "mock": "node ./mock/index.js",
@@ -37,9 +37,9 @@
     "polished": "^4.2.2",
     "prop-types": "^15.8.1",
     "rc-notification": "^5.3.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-final-form": "^6.5.9",
     "react-hook-form": "^7.48.2",
     "react-router": "5.2.0",
