--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "PORT=5173 next dev ",
+    "dev": "set PORT=5173 && next dev",
     "build": "next build",
     "lint": "next lint",
     "mock": "node ./mock/index.js",
