--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-styled-components": "^7.2.0",
     "jest-transform-stub": "^2.0.0",
     "jest-transformer-svg": "^2.0.2",
     "less": "^4.2.0",
