feat: add i18n switch language
- added i18n dir to app dir
- added en.json and zh-cn.json to i18n dir
- added I18nWrapper to i18n dir
- nested I18nWrapper into provider.tsx

language can be switched from AppSetting page
i18n can affect sidebarContent and AppSetting page now
further implement to other page will be execute after code review
AppSetting page dropdown gloss solved but further improvement will be solved in CP36

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       "@/constants/*": ["shared/constants/*"],
       "@/containers/*": ["containers/*"],
       "@/routes/*": ["routes/*"],
-      "@/components/*": ["shared/components/*"]
+      "@/components/*": ["shared/components/*"],
+      "@/i18n/*": ["i18n/*"]
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
