--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "final-form": "^4.20.10",
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.1",
+    "i18next": "^23.11.5",
+    "i18next-resources-to-backend": "^1.2.1",
     "mdi-react": "^9.3.0",
     "next": "^14.1.3",
     "polished": "^4.2.2",
@@ -43,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^14.1.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "recharts": "^2.12.6",
@@ -83,6 +86,7 @@
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-styled-components": "^7.2.0",
     "jest-transform-stub": "^2.0.0",
     "jest-transformer-svg": "^2.0.2",
     "less": "^4.2.0",
