--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_DEV_SERVER_URL: ${{ secrets.NEXT_PUBLIC_DEV_SERVER_URL }}
     steps:
       - name: checkout code
         uses: actions/checkout@v4
