--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,6 @@
       }
     ]
   },
-  "include": ["./src", "./dist/types/**/*.ts", "./next-env.d.ts"],
+  "include": ["./src", "./dist/types/**/*.ts", "./next-env.d.ts", ".next/types/**/*.ts"],
   "exclude": ["./node_modules"]
 }
